--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
   font-size: 1.5em;
   line-height: 1.8em;
   background: rgba(0, 0, 0, 0.5);
+  background-align:centre;
   padding: 15px;
   border-radius: 10px;
   margin-top: 10px;
