--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,16 @@ body {
 /* Heart and Counter */
 .heart-container {
   width: 40%;
-  text-align: center;
+/*   text-align: center; */
   color: black;
-  background: rgba(255, 255, 255, 0.8);
+/*   background: rgba(255, 255, 255, 0.8); */
   padding: 20px;
   border-radius: 50%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   position: fixed; /* Fixes the heart in the center */
   top: 50%; /* Centers vertically */
   left: 60%; /* Centers horizontally */
-  transform: translate(-50%, -50%); /* Ensures perfect centering */
+/*   transform: translate(-50%, -50%); /* Ensures perfect centering */ */
 }
 
 #counter {
